@@ -593,7 +593,7 @@ LoadDLLfunc (ldap_get_next_page_s, 0, wldap32)
 LoadDLLfunc (ldap_get_valuesW, 0, wldap32)
 LoadDLLfunc (ldap_get_values_lenW, 0, wldap32)
 LoadDLLfunc (ldap_initW, 0, wldap32)
-LoadDLLfunc (ldap_memfreeW, 0, wldap32)
+LoadDLLfunc (ldap_msgfree, 0, wldap32)
 LoadDLLfunc (ldap_next_entry, 0, wldap32)
 LoadDLLfunc (ldap_search_abandon_page, 0, wldap32)
 LoadDLLfunc (ldap_search_init_pageW, 0, wldap32)
