@@ -1,3 +1,12 @@
+2014-05-23  Corinna Vinschen  <corinna@vinschen.de>
+
+	* autoload.cc (ldap_memfreeW): Remove.
+	(ldap_msgfree): Import.
+	* ldap.cc: Throughout, use ldap_msgfree to free LDAPMessage memory,
+	rather than ldap_memfreeW.
+	(cyg_ldap::next_account): Immediately abandon search when quiting from
+	search.
+
 2014-05-22  Corinna Vinschen  <corinna@vinschen.de>
 
 	* autoload.cc (ldap_abandon): Remove.
